--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "PT Sans", "Helvetica", "Arial", sans-serif;
+    z-index: 0;
 }
 
 .header {
@@ -482,37 +483,26 @@ footer {
     color: #fc8507;
 }
 
-/**/
-
-/* Стили для подложки */
-
-.overlay_hidden {
-    /* Скрываем подложку  */
+/*.overlay_hidden {
     opacity: 0;
     visibility: hidden;
+    position: absolute;
 }
 
 .overlay_visible {
-    /* Скрываем подложку  */
     opacity: 1;
     visibility: visible;
-
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    /*background-color: rgba(0, 0, 0, .5);*/
-    background-color: black;
-    z-index: 19;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 100;
     transition: .3s all;
-}
-
-
-/* Стили для модальных окон */
+}*/
 
 .modal_hidden {
-    /* Скрываем окна  */
     opacity: 0;
     visibility: hidden;
     position: absolute;
@@ -537,6 +527,29 @@ footer {
     color: black;
 }
 
+.overlay_hidden {
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+}
+
+.overlay_active {
+    opacity: 1;
+    visibility: visible;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 20;
+    box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2);
+    text-align: center;
+    padding: 30px;
+    border-radius: 3px;
+    transition: 0.3s all;
+    background-color: rgba(0, 0, 0, .5);
+}
+
 .modal__cross {
     width: 15px;
     height: 15px;
@@ -553,7 +566,7 @@ footer {
     text-align: left;
 }
 
-#clock{
+#clock {
     color: white;
     font-size: 20px;
 }
